# EntityLib

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  EntityLib.DotSettings  README.md  WildShared.DotSettings  WildShared.ruleset  build.bat  build.sh  regen_entgen.bat  regen_entgen.sh  run_unit_tests.bat  run_unit_tests.sh
.github/workflows/: cmake.yml  cmake_msvc.yml
Core/WildShared/: Exception.h
DemoSchemas/: EditionComponents.json  RuntimeComponents.json  Scene-schema.json
EntLibAPIGenerator/: EntLibAPIGenerator.cpp
EntityLib/: ComponentMerge.cpp  EntityLib.cpp  EntityLib.sln  EntityLib2019.sln  EntityLibCore.cpp  Exception.h  FileProperty.cpp  MemoryProfiler.h  PropImpl.cpp  PropImpl.h  Property.cpp  Schema.cpp  SchemaLoader.cpp  SchemaLoader.h  Tools.cpp  Tools.h  ValidJson.cpp  ValidJson.h
EntityLib/EntGen/: EntGen.cpp  EntGen.vcxproj  schemaOutput.json  test_entgen.py
EntityLib/EntLibAPIGenerator/: EntLibAPIGenerator.args.json  EntLibAPIGenerator.cpp  EntLibAPIGenerator.vcxproj  test_entgen.py
EntityLib/EntityLib/: Array.cpp  Array.h  Component.cpp  Component.h  ComponentMerge.cpp  Cursor.cpp  CursorRestore.cpp  EntVisitor.cpp  Entity.cpp  Entity.h  EntityLib.cpp  EntityLib.vcxproj  EntityLib2019.vcxproj  EntityLibCore.cpp  FileCursor.cpp  FileProperty.cpp  HandleImpl.cpp  Map.cpp  Map.h  Node.cpp  Node.h  Object.cpp  Object.h  Override.h  PropImpl.cpp  PropImpl.h  Property.cpp  RemovableMap.h  Scene.cpp  Scene.h  Schema.cpp  SchemaLoader.cpp  SchemaLoader.h  SubSceneComponent.cpp  SubSceneComponent.h  Tools.cpp  Tools.h  Union.cpp  Union.h  ValidJson.cpp  (+4 more)
EntityLib/EntityLibPy/: EntityLibPy.cpp  EntityLibPy.vcxproj  EntityLibPy.vcxproj.filters  EntityLibPy2019.vcxproj  stubgen_EntityLibPy.py
EntityLib/GenCpp/: GenCpp.vcxproj
EntityLib/Test/: BlendDurationIn.node  DumpNode.h  SceneMainWorld.test.scene  SceneWild.test.scene  TestCursor.cpp  TestCursor.h  TestEntityDLL.cpp  TestEntityLib.vcxproj  TestEntityLib2019.vcxproj  TestNodeHandler.cpp  TestNodeHandler.h  entity-references-a.entity  entity-references.scene  entity-subscene-override-saved.entity  entity-subscene-override.entity  entity-subscene.entity  instance.copy.entity  instance.create.entity  instance.cursor.entity  instance.detached.entity  instance.entity  instance.prout.entity  instance2.entity  instance3.entity  instance_add_subentity.copy.entity  instance_add_subentity.entity  instance_applied.entity  instance_override_subentity.copy.entity  instance_override_subentity.entity  instance_override_subscene.copy.entity  instance_override_subscene.entity  key_double.entity  missing_embedded.entity  myseedpatchMarianne.seedpatchdata.copy.node  pinetreec50cmh5mbasic.copy.entity  pinetreec50cmh5mbasic.entity  prefab.copy.entity  prefab.emptyembbeded.entity  prefab.entity  prefab_updated.entity  (+15 more)
EntityLib/TestEntGen/: TestEntGen.vcxproj  test_entgen.cpp
EntityLib/TestGenCpp/: TestGenCpp.vcxproj  test_entgen.cpp
EntityLib/UpdateSchemas/: UpdateSchemas.cpp  UpdateSchemas.vcxproj  UpdateSchemas.vcxproj.filters  UpdateSchemas2019.vcxproj
EntityLib/include/: EntityLib.h  EntityLibCore.h
EntityLibPy/: EntityLibPy.cpp  EntityLibPy2019.vcxproj
Test/: ObjectInSet.node  OldNode2.MapOfObject.node  SceneWild.test.scene  TestCursor.cpp  TestCursor.h  TestEntityDLL.cpp  TestEntityLib2019.vcxproj  entity-arrays.entity  entity-references-a.entity  entity-references.scene  instance.copy.entity  instance.create.entity  instance.cursor.entity  instance.prout.entity  instance_add_subentity.copy.entity  instance_applied.entity  instance_arrays.entity  instance_override_subentity.entity  missing_embedded.entity  myseedpatchMarianne.seedpatchdata.copy.node  myseedpatchMarianne.seedpatchdata.node  myseedpatch_schema_style.node  prefab.copy.entity  prefab.emptyembbeded.entity  prefab.entity  subentity2.entity  test.HeightObj.node  test.SeedPatch.node  test.StickToTerrain.node  test_entitylib.py
Test/Creature/: my_creature_level1.entity
Test/test_output/: test_create.entity  whistlingplainsfpmain.scene
TestEntGen/: TestEntGen.vcxproj  test_entgen.cpp
UpdateSchemas/: UpdateSchemas.cpp
WiLDRPC/: Boolean.fbs  Camera.fbs  Camera_generated.h  Color.fbs  Float.fbs  Float_generated.h  Integer.fbs  Position.fbs  Quat.fbs  RPCHeader.fbs  RPCHeader_generated.h  Result.fbs  Result_generated.h  String.fbs  String_generated.h  UInt3.fbs  Vector2.fbs  Vector3.fbs  Vector3_generated.h  _regenerate.bat  regenerate.bat  regerenate.bat  wildRPC.fbs  wildRPC_generated.h
WiLDRPC/TestScripts/: Helpers.py  SetCamera.py  TestHeaderWithParams.py
WiLDRPC/WildRPC/: Camera.py  Helpers.py  Position.py  Quat.py  RPCHeader.py  RPC_CameraManager.py  String.py  Type.py  UInt3.py  Vector2.py  Vector3.py  __all__.py
WildRPCClient/: WildRPCClient.sln  WildRPCClient.sln.DotSettings  WildRPCClient2019.sln
WildRPCClient/Test/: Test.cpp  Test.vcxproj  Test2019.vcxproj
WildRPCClient/WildRPCClient/: Connection.cpp  ConnectionPimpl.cpp  ConnectionPimpl.h  FloatParameter.cpp  MethodInvocation.cpp  Parameter.cpp  Parameters.cpp  Position.cpp  Quat.cpp  RPCParameters.cpp  Result.cpp  WildRPCClient.cpp  WildRPCClient.vcxproj  WildRPCClient2019.vcxproj
WildRPCClient/WildRPCClientPy/: WildRPCClientPy.cpp  WildRPCClientPy.vcxproj  WildRPCClientPy2019.vcxproj
WildRpcApiGenerator/: .gitignore  BaseApiExtensions.cs  Program.cs  WildRpcApiGenerator.csproj  WildRpcApiGenerator.sln
WildRpcApiGenerator/Generators/: BaseApiGenerator.cs  (+4 more)
scripts/: make_schemas.bat  run_unit_tests.bat
wbin/: regenerate.bat  regerenate.bat  wanm.fbs  warea.sdf.fbs  wareamesh.fbs  wbin.fbs  wbin_generated.h  wbp.fbs  wbs.fbs  wedges.fbs  wgvoxelvolume.fbs  wgvoxelvolume_generated.h  wheightmap.fbs  wheightmap_tiledb.fbs  who.fbs  wmaxanm.fbs  wmesh.fbs  wmmesh.fbs  wpcloud.fbs  wpcloud_generated.h  wphys.fbs  wphys_generated.h  wpvt.fbs  wrtpcld.fbs  wsdf.fbs  wskl.fbs  wskl_generated.h  wsp.fbs  wstampcloud.fbs  wstampcloud_generated.h  wthumb.fbs  wthumb_generated.h  wtso.fbs  wtso_generated.h  wvis.fbs  wviz.fbs
(+1615 files in other folders)
